# ServerBack_FastAPI

./: .dockerignore  .env  .gitignore  AGENTS.md  README.md  alembic.ini  database.db  docker-compose.yml  docker.compose.yml  main.py  pyproject.toml  requirements.txt
Database/: database.py  model.py  schema.py
ai_model/: keras_model.h5  labels.txt  tomato.p
app/: config.py  main.py
app/api/: deps.py
app/api/v1/: admin.py  auth.py  favorites.py  fruits.py  nutrition.py  prediction.py  router.py  search.py  upload.py  vegetables.py
app/core/: exceptions.py  logging_conf.py  pagination.py  rate_limit.py  repository.py  response.py  security.py  security_headers.py  storage.py
app/database/: engine.py
app/database/migrations/: env.py
app/domains/admin/: schemas.py  service.py
app/domains/auth/: password.py  repository.py  (+2 more)
app/ml/: service.py
controller/: vegetable.py
db/: database.py  model.py
db/models/: favorite_model.py  fruit_model.py  nutrition_model.py  user_model.py  vegetable_model.py
db/schema/: user.py
depencies/: dependencies.py
repository/: jwt.py  users.py  users_repo.py
router/: vegetable.py
routers/: admin.py  auth.py  favorite.py  fruit.py  prediction.py  register.py  search.py  users.py  vegetable.py
schema/: favorite_schema.py  users.py
schema/routers/: admin.py  favorite.py  search.py  users.py  vegetable.py
script/: insert_picture.py
tests/: conftest.py  test_admin.py  test_auth.py  test_auth_flow.py  test_favorites.py  test_fruits.py  test_nutrition.py  test_search.py  test_upload.py  test_vegetables.py
(+18 files in other folders)
